add blog layout

--- a/data/blogs/javascripts/welcome.mdx
+++ b/data/blogs/javascripts/welcome.mdx
@@ -1,9 +1,10 @@
 ---
 title: 'welcome to bigest land in lorem'
 description: 'You can see the first blog here'
-publishedAt: '2-3-2022'
+publishedAt: '2-3-2018'
 tag: ['coding', 'music']
 cover: '/mockup/placeholder2.png'
+author: 'Hossein Shourabi'
 ---
 
 # Hello World
