--- a/data/blogs/javascripts/my-blog.mdx
+++ b/data/blogs/javascripts/my-blog.mdx
@@ -1,9 +1,10 @@
 ---
-title: 'You can see the my blog here'
+title: 'A You can see the my blog here'
 description: 'You can see the my blog here'
-publishedAt: '2-4-2022'
+publishedAt: '2-2-2022'
 tag: ['people', 'music']
 cover: '/mockup/placeholder3.png'
+author: 'Hossein Shourabi'
 ---
 
 # My blog
