--- a/data/blogs/my.mdx
+++ b/data/blogs/my.mdx
@@ -1,9 +1,10 @@
 ---
 title: 'You can see 10 famous my blog here'
 description: 'You can see the first blog here'
-publishedAt: '2-2-2022'
+publishedAt: '2-12-2022'
 tag: ['people', 'sport']
 cover: '/mockup/placeholder.png'
+author: 'Hossein Shourabi'
 ---
 
 # this is first blog
