--- a/data/blogs/sample-1.mdx
+++ b/data/blogs/sample-1.mdx
@@ -3,7 +3,7 @@ title: '10 Famous Landscape you should know'
 description: 'You can see the first blog here'
 publishedAt: '12-2-2019'
 tag: ['people', 'sport']
-cover: '/mockup/placeholder4.png'
+cover: placeholder.png
 author: 'Hossein Shourabi'
 ---
 
@@ -16,6 +16,36 @@ effigies, cubile hic tempora quotiens. Ipsos huic pennas quorum nomine ortus
 matris habitu, Bienoris tigride in foramina solitam _Priamum_. Ut aequora orbem
 mentior; iura Thybris putat, cingitur Triopeida debita iussaque dolorque matrum
 genuit tibi sedili suae.
+
+# GFM
+
+## Autolink literals
+
+www.example.com, https://example.com, and contact@example.com.
+
+## Footnote
+
+A note[^1]
+
+[^1]: Big note.
+
+## Strikethrough
+
+~one~ or ~~two~~ tildes.
+
+## Table
+
+| a    | b   | c   | d   |
+| :--- | :-- | :-- | :-- |
+| test | bb  | aa  | sd  |
+| test | bb  | aa  | sd  |
+| test | bb  | aa  | sd  |
+| test | bb  | aa  | sd  |
+
+## Tasklist
+
+- [ ] to do
+- [x] done
 
 ## Correctis ferro perlucida occiduo
 
@@ -50,3 +80,22 @@ Amaverat nobis; Iove ventos, ludat mollescat novandum, sororum animaeque vero.
 Scitabere relictus, quamvis velatus, bracchia recepto fallebat nondum! Ait luctu
 nec ales omnes Atque praefoderat latius turba astra observata domus, si nec et
 sunt et Nonacrina?
+
+```js
+console.log('test');
+```
+
+```c
+    if (gatewaySsid) {
+        plugState.personal_led_firewire.boxOspfRemote(remote_blacklist_san, gif,
+                rich_readme);
+        microphone_raster(port - usbWindowsConstant);
+        cameraMemory += socialSkyscraper + manetMetadataGraphics;
+    } else {
+        urlAiff = namespace_vlb;
+        infotainmentSystem(3 + integrated_sdram, 3, mirrorGraphicCopy);
+    }
+    recursiveMac.pebibyte.osi(internet);
+    browser = cdn - autoresponderRestore;
+
+```
