--- a/data/blogs/sample-3.mdx
+++ b/data/blogs/sample-3.mdx
@@ -3,7 +3,7 @@ title: 'welcome to bigest land in lorem'
 description: 'You can see the first blog here'
 publishedAt: '2-3-2018'
 tag: ['coding', 'music']
-cover: '/mockup/placeholder2.png'
+cover: placeholder.png
 author: 'Hossein Shourabi'
 ---
 
