--- a/data/blogs/sample-2.mdx
+++ b/data/blogs/sample-2.mdx
@@ -3,7 +3,7 @@ title: 'A You can see the my blog here'
 description: 'You can see the my blog here'
 publishedAt: '2-2-2022'
 tag: ['people', 'music']
-cover: '/mockup/placeholder3.png'
+cover: placeholder.png
 author: 'Hossein Shourabi'
 ---
 
