--- a/data/blogs/sample-4.mdx
+++ b/data/blogs/sample-4.mdx
@@ -3,7 +3,7 @@ title: 'You can see 10 famous my blog here'
 description: 'You can see the first blog here'
 publishedAt: '2-12-2022'
 tag: ['people', 'sport']
-cover: '/mockup/placeholder.png'
+cover: placeholder.png
 author: 'Hossein Shourabi'
 ---
 
