table of content

--- a/data/blogs/sample-1.mdx
+++ b/data/blogs/sample-1.mdx
@@ -5,6 +5,7 @@ publishedAt: '12-2-2019'
 tag: ['people', 'sport']
 cover: placeholder.png
 author: 'Hossein Shourabi'
+tableOfContent: 'on'
 ---
 
 # Titaniacis fovet caesarumque agros
@@ -23,13 +24,13 @@ genuit tibi sedili suae.
 
 www.example.com, https://example.com, and contact@example.com.
 
-## Footnote
+### Footnote
 
 A note[^1]
 
 [^1]: Big note.
 
-## Strikethrough
+#### Strikethrough
 
 ~one~ or ~~two~~ tildes.
 
