--- a/data/blogs/sample-2.mdx
+++ b/data/blogs/sample-2.mdx
@@ -5,6 +5,7 @@ publishedAt: '2-2-2022'
 tag: ['people', 'music']
 cover: placeholder.png
 author: 'Hossein Shourabi'
+tableOfContent: 'off'
 ---
 
 # My blog
