--- a/data/blogs/sample-3.mdx
+++ b/data/blogs/sample-3.mdx
@@ -5,6 +5,7 @@ publishedAt: '2-3-2018'
 tag: ['coding', 'music']
 cover: placeholder.png
 author: 'Hossein Shourabi'
+tableOfContent: 'on'
 ---
 
 # Hello World
