update next - add gsap

--- a/data/blogs/sample-1.mdx
+++ b/data/blogs/sample-1.mdx
@@ -82,7 +82,7 @@ Scitabere relictus, quamvis velatus, bracchia recepto fallebat nondum! Ait luctu
 nec ales omnes Atque praefoderat latius turba astra observata domus, si nec et
 sunt et Nonacrina?
 
-```js
+```javascript
 console.log('test');
 ```
 
